This commit includes all the services, still have to work on the logout service and ensure it is functioning correctly.